--- a/src/Card_games/BlackJack_FX/src/BJ.fxml
+++ b/src/Card_games/BlackJack_FX/src/BJ.fxml
@@ -4,12 +4,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Card_games.BlackJack_FX.src.BJ_controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: green;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Card_games.BlackJack_FX.src.BJ_controller">
    <children>
-      <ImageView fitHeight="192.0" fitWidth="108.0" layoutX="68.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="260.0" fitWidth="173.0" layoutX="32.0" layoutY="504.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/rewers_192x108.png" />
+            <Image url="@../img/Dama_Karo_173x260.png" />
          </image>
       </ImageView>
    </children>
