--- a/src/Card_games/BlackJack_FX/FXML/BJ_menuScreen.fxml
+++ b/src/Card_games/BlackJack_FX/FXML/BJ_menuScreen.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Card_games.BlackJack_FX.Controlers.BJ_menuControl">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Card_games.BlackJack_FX.Controlers.BJ_menuControl">
     <children>
-        <Button fx:id="gameButton" layoutX="49.0" layoutY="265.0" mnemonicParsing="false" onAction="#gameButtonOnAction" text="Gra" />
-        <Button fx:id="bonusButton" layoutX="130.0" layoutY="265.0" mnemonicParsing="false" onAction="#bonusButtonOnAction" text="Bonus" />
-        <Button fx:id="exitButton" layoutX="214.0" layoutY="265.0" mnemonicParsing="false" onAction="#exitButtonOnAction" text="Wyjście" />
+        <Button fx:id="gameButton" layoutX="49.0" layoutY="265.0" mnemonicParsing="false" onAction="#gameButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="Gra" />
+        <Button fx:id="bonusButton" layoutX="249.0" layoutY="265.0" mnemonicParsing="false" onAction="#bonusButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="Bonus" />
+        <Button fx:id="exitButton" layoutX="459.0" layoutY="265.0" mnemonicParsing="false" onAction="#exitButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="Wyjście" />
         <Label layoutX="151.0" layoutY="107.0" text="MenuScreen    BLACKJACK">
             <font>
                 <Font size="23.0" />
