--- a/src/Card_games/BlackJack_FX/FXML/BJ_bonusScreen.fxml
+++ b/src/Card_games/BlackJack_FX/FXML/BJ_bonusScreen.fxml
@@ -2,18 +2,19 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="bonusAnchorPane" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: green;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Card_games.BlackJack_FX.Controlers.BJ_bonusControl">
+<AnchorPane fx:id="bonusAnchorPane" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: green;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Card_games.BlackJack_FX.Controlers.BJ_bonusControl">
     <children>
-        <Label layoutX="439.0" layoutY="25.0" text="BonusScreen">
+        <Label layoutX="555.0" layoutY="14.0" text="BONUS">
             <font>
-                <Font size="24.0" />
+                <Font name="System Bold" size="26.0" />
             </font>
         </Label>
-        <Button fx:id="bonusReturnButton" layoutX="621.0" layoutY="14.0" mnemonicParsing="false" onAction="#bonusReturnButtonOnAction" prefHeight="62.0" prefWidth="120.0" text="Return" />
-      <ImageView fx:id="imgTest" fitHeight="260.0" fitWidth="173.0" layoutX="1013.0" layoutY="526.0" pickOnBounds="true" preserveRatio="true" />
+        <Button fx:id="bonusReturnButton" layoutX="1095.0" layoutY="750.0" mnemonicParsing="false" onAction="#bonusReturnButtonOnAction" prefHeight="35.0" prefWidth="91.0" text="RETURN">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
     </children>
 </AnchorPane>
