--- a/src/Card_games/BlackJack_FX/FXML/BJ_menuScreen.fxml
+++ b/src/Card_games/BlackJack_FX/FXML/BJ_menuScreen.fxml
@@ -2,18 +2,30 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Card_games.BlackJack_FX.Controlers.BJ_menuControl">
+<AnchorPane fx:id="menuAnchorPane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Card_games.BlackJack_FX.Controlers.BJ_menuControl">
     <children>
-        <Button fx:id="gameButton" layoutX="49.0" layoutY="265.0" mnemonicParsing="false" onAction="#gameButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="Gra" />
-        <Button fx:id="bonusButton" layoutX="249.0" layoutY="265.0" mnemonicParsing="false" onAction="#bonusButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="Bonus" />
-        <Button fx:id="exitButton" layoutX="459.0" layoutY="265.0" mnemonicParsing="false" onAction="#exitButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="Wyjście" />
-        <Label layoutX="151.0" layoutY="107.0" text="MenuScreen    BLACKJACK">
-            <font>
-                <Font size="23.0" />
-            </font>
-        </Label>
+      <ImageView fitHeight="800.0" fitWidth="1200.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Img/Blackjack_tlo.jpg" />
+         </image>
+      </ImageView>
+        <Button fx:id="gameButton" layoutX="114.0" layoutY="253.0" mnemonicParsing="false" onAction="#gameButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="START GAME">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Button>
+        <Button fx:id="bonusButton" layoutX="114.0" layoutY="352.0" mnemonicParsing="false" onAction="#bonusButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="BONUS">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Button>
+        <Button fx:id="exitButton" layoutX="114.0" layoutY="455.0" mnemonicParsing="false" onAction="#exitButtonOnAction" prefHeight="77.0" prefWidth="171.0" text="EXIT">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Button>
+      <Label layoutX="1045.0" layoutY="771.0" text="Created by Jacek Popiołek" textFill="#494949" />
     </children>
 </AnchorPane>
