--- a/src/main/resources/JavaFX/MojaBiblioteczka/FXML/TopMenuButtons.fxml
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/FXML/TopMenuButtons.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MojaBiblioteczka.Controllers.TopMenuButtonsController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MojaBiblioteczka.Controllers.TopMenuButtonsController">
    <children>
       <ToggleButton mnemonicParsing="false" onAction="#onBibliotekaAction" prefHeight="80.0" prefWidth="150.0" text="%library">
          <toggleGroup>
@@ -22,6 +22,15 @@
             <ImageView fitHeight="47.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Icons/book-opened.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button mnemonicParsing="false" onAction="#onAddCategoryAction" prefHeight="80.0" prefWidth="164.0" text="%add.category">
+         <graphic>
+            <ImageView fitHeight="39.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Icons/clipboard.png" />
                </image>
             </ImageView>
          </graphic>
