--- a/src/main/resources/JavaFX/MojaBiblioteczka/FXML/AddCategory.fxml
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/FXML/AddCategory.fxml
@@ -17,6 +17,7 @@
             <Button fx:id="addCategoryButton" mnemonicParsing="false" onAction="#onAddCategoryButtonAction" text="%add.button" />
             <Label text="%choose.category" />
             <ComboBox fx:id="categoryComboBox" onAction="#onCategoryComboBoxAction" prefWidth="150.0" />
+            <Button fx:id="editCategoryButton" mnemonicParsing="false" onAction="#onEditCategoryButtonAction" text="%edit.button" />
             <Button fx:id="deleteCategoryButton" mnemonicParsing="false" onAction="#onDeleteCategoryButtonAction" text="%delete.button" />
          </children>
          <padding>
