Moja biblioteczka - lesson 38 (TreeView)

--- a/src/main/resources/JavaFX/MojaBiblioteczka/FXML/AddCategory.fxml
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/FXML/AddCategory.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -24,5 +25,6 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </HBox>
+      <TreeView fx:id="categoryTreeView" prefWidth="200.0" showRoot="false" />
    </children>
 </VBox>
