--- a/src/main/resources/JavaFX/MojaBiblioteczka/FXML/TopMenuButtons.fxml
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/FXML/TopMenuButtons.fxml
@@ -35,6 +35,15 @@
             </ImageView>
          </graphic>
       </Button>
+      <Button fx:id="addAuthor" mnemonicParsing="false" onAction="#onAddAuthorAction" prefHeight="80.0" prefWidth="164.0" text="%add.author">
+         <graphic>
+            <ImageView fitHeight="47.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Icons/businessman.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
