--- a/src/main/resources/JavaFX/MojaBiblioteczka/FXML/AddAuthor.fxml
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/FXML/AddAuthor.fxml
@@ -3,10 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MojaBiblioteczka.Controllers.AuthorController">
    <children>
@@ -22,5 +23,14 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </HBox>
+      <TableView fx:id="authorTableView">
+        <columns>
+          <TableColumn fx:id="nameColumn" maxWidth="500.0" minWidth="-1.0" prefWidth="500.0" text="%name.author" />
+          <TableColumn fx:id="surnameColumn" maxWidth="500.0" minWidth="-1.0" prefWidth="500.0" text="%surname.author" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </VBox>
