--- a/src/main/resources/JavaFX/MojaBiblioteczka/FXML/AddAuthor.fxml
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/FXML/AddAuthor.fxml
@@ -23,10 +23,10 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </HBox>
-      <TableView fx:id="authorTableView">
+      <TableView fx:id="authorTableView" editable="true">
         <columns>
-          <TableColumn fx:id="nameColumn" maxWidth="500.0" minWidth="-1.0" prefWidth="500.0" text="%name.author" />
-          <TableColumn fx:id="surnameColumn" maxWidth="500.0" minWidth="-1.0" prefWidth="500.0" text="%surname.author" />
+          <TableColumn fx:id="nameColumn" maxWidth="500.0" minWidth="-1.0" onEditCommit="#onNameEditCommit" prefWidth="500.0" text="%name.author" />
+          <TableColumn fx:id="surnameColumn" maxWidth="500.0" minWidth="-1.0" onEditCommit="#onSurnameEditCommit" prefWidth="500.0" text="%surname.author" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
