--- a/src/main/resources/JavaFX/MojaBiblioteczka/FXML/ListBooks.fxml
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/FXML/ListBooks.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,9 +14,14 @@
       <HBox prefWidth="200.0" spacing="10.0">
          <children>
             <Label text="%category.book" />
-            <ComboBox prefWidth="150.0" />
-            <Label text="%author.book" />
-            <ComboBox prefWidth="150.0" />
+            <ComboBox fx:id="categoryFilterComboBox" onAction="#onFilterComboBoxAction" prefWidth="150.0" />
+            <Button fx:id="clearCategoryCBoxButton" mnemonicParsing="false" onAction="#onClearCategoryCBoxButtonAction" text="X" />
+            <Label text="%author.book">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin></Label>
+            <ComboBox fx:id="authorFilterComboBox" onAction="#onFilterComboBoxAction" prefWidth="150.0" />
+            <Button fx:id="clearAuthorCBoxButton" mnemonicParsing="false" onAction="#onClearAuthorCBoxButtonAction" text="X" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
