--- a/src/main/resources/JavaFX/MojaBiblioteczka/FXML/ListBooks.fxml
+++ b/src/main/resources/JavaFX/MojaBiblioteczka/FXML/ListBooks.fxml
@@ -29,14 +29,15 @@
       </HBox>
       <TableView fx:id="booksTableView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
         <columns>
-            <TableColumn fx:id="titleColumn" prefWidth="75.0" text="%title.book" />
-            <TableColumn fx:id="descColumn" prefWidth="75.0" text="%desc.book" />
-            <TableColumn fx:id="authorColumn" prefWidth="75.0" text="%author.book" />
-            <TableColumn fx:id="categoryColumn" prefWidth="75.0" text="%category.book" />
-            <TableColumn fx:id="ratingColumn" prefWidth="75.0" text="%rating.book" />
+            <TableColumn fx:id="titleColumn" maxWidth="4000.0" prefWidth="100.0" text="%title.book" />
+            <TableColumn fx:id="descColumn" maxWidth="10000.0" prefWidth="200.0" text="%desc.book" />
+            <TableColumn fx:id="authorColumn" maxWidth="4000.0" prefWidth="85.0" text="%author.book" />
+            <TableColumn fx:id="categoryColumn" maxWidth="3000.0" prefWidth="60.0" text="%category.book" />
+            <TableColumn fx:id="ratingColumn" maxWidth="1500.0" prefWidth="50.0" text="%rating.book" />
             <TableColumn fx:id="isbnColumn" prefWidth="75.0" text="%isbn.book" />
             <TableColumn fx:id="releaseColumn" prefWidth="75.0" text="%release.book" />
-            <TableColumn fx:id="deleteColumn" prefWidth="75.0" text="%delete.button" />
+            <TableColumn fx:id="deleteColumn" maxWidth="1500.0" prefWidth="60.0" text="%delete.button" />
+            <TableColumn fx:id="editColumn" maxWidth="1500.0" prefWidth="60.0" text="%edit.button" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
