--- a/src/main/resources/JavaFX/MyMix/FXML/Window_03.fxml
+++ b/src/main/resources/JavaFX/MyMix/FXML/Window_03.fxml
@@ -6,15 +6,16 @@
 <?import javafx.scene.text.Font?>
 
 <!--<Pane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.Window_03_Controller">-->
-<Pane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="JavaFX.MyMix.Controllers.Window_03_Controller">
+
+<Pane fx:id="window03Pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.Window_03_Controller">
    <children>
-      <Label layoutX="95.0" layoutY="139.0" text="WINDOW_03">
+      <Label layoutX="500.0" layoutY="20.0" text="WINDOW_03">
          <font>
-            <Font size="36.0" />
+            <Font size="26.0" />
          </font>
       </Label>
-      <Button fx:id="optionsReturnBtn" layoutX="159.0" layoutY="334.0" mnemonicParsing="false" onAction="#onPowrotBtnAction" text="Powrot" />
-      <Label layoutX="25.0" layoutY="21.0" text="MyMix">
+      <Button fx:id="ReturnBtn" layoutX="12.0" layoutY="12.0" mnemonicParsing="false" onAction="#onPowrotBtnAction" prefHeight="60.0" prefWidth="100.0" text="Return" />
+      <Label layoutX="250.0" layoutY="20.0" text="MyMix">
          <font>
             <Font size="24.0" />
          </font>
