--- a/src/main/resources/JavaFX/SimpleButtonMenu/FXML/Window_01.fxml
+++ b/src/main/resources/JavaFX/SimpleButtonMenu/FXML/Window_01.fxml
@@ -11,6 +11,6 @@
          <font>
             <Font size="36.0" />
          </font></Label>
-      <Button fx:id="appReturnBtn" layoutX="174.0" layoutY="347.0" mnemonicParsing="false" onAction="#onPowrotBtnAction" text="Powrót" />
+      <Button fx:id="ReturnBtn" layoutX="174.0" layoutY="347.0" mnemonicParsing="false" onAction="#onPowrotBtnAction" text="Powrót" />
    </children>
 </Pane>
