--- a/src/main/resources/JavaFX/SimpleButtonMenu/FXML/Window_02.fxml
+++ b/src/main/resources/JavaFX/SimpleButtonMenu/FXML/Window_02.fxml
@@ -12,6 +12,6 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Button fx:id="optionsReturnBtn" layoutX="159.0" layoutY="334.0" mnemonicParsing="false" onAction="#onPowrotBtnAction" text="Powrot" />
+      <Button fx:id="ReturnBtn" layoutX="159.0" layoutY="334.0" mnemonicParsing="false" onAction="#onPowrotBtnAction" text="Powrot" />
    </children>
 </Pane>
