--- a/src/main/resources/JavaFX/MyMix/FXML/W04_SequentialTransition.fxml
+++ b/src/main/resources/JavaFX/MyMix/FXML/W04_SequentialTransition.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<!--<Pane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.Window_03_Controller">-->
+<!--<Pane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.W03_Controller_ParallelTransitionlelTransition">-->
 
-<Pane fx:id="window06Pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.Window_06_Controller">
+<Pane fx:id="window04Pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.W04_Controller_SequentialTransition">
    <children>
-      <Label layoutX="500.0" layoutY="20.0" text="WINDOW_06">
+      <Label layoutX="500.0" layoutY="20.0" text="WINDOW_04">
          <font>
             <Font size="26.0" />
          </font>
