--- a/src/main/resources/JavaFX/MyMix/FXML/W01_FadeTransition.fxml
+++ b/src/main/resources/JavaFX/MyMix/FXML/W01_FadeTransition.fxml
@@ -8,7 +8,7 @@
 
 <Pane fx:id="window01Pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.W01_Controller_FadeTransition">
    <children>
-      <Label layoutX="500.0" layoutY="20.0" text="WINDOW_01">
+      <Label layoutX="500.0" layoutY="20.0" text="W01 Fade Transition">
          <font>
             <Font size="26.0" />
          </font>
