--- a/src/main/resources/JavaFX/MyMix/FXML/W03_ParallelTransition.fxml
+++ b/src/main/resources/JavaFX/MyMix/FXML/W03_ParallelTransition.fxml
@@ -9,7 +9,7 @@
 
 <Pane fx:id="window03Pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.W03_Controller_ParallelTransition">
    <children>
-      <Label layoutX="500.0" layoutY="20.0" text="WINDOW_03">
+      <Label layoutX="500.0" layoutY="20.0" text="W03 Parallel Transition">
          <font>
             <Font size="26.0" />
          </font>
