--- a/src/main/resources/JavaFX/MyMix/FXML/W04_SequentialTransition.fxml
+++ b/src/main/resources/JavaFX/MyMix/FXML/W04_SequentialTransition.fxml
@@ -9,7 +9,7 @@
 
 <Pane fx:id="window04Pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.W04_Controller_SequentialTransition">
    <children>
-      <Label layoutX="500.0" layoutY="20.0" text="WINDOW_04">
+      <Label layoutX="500.0" layoutY="20.0" text="W04 Sequential Transition">
          <font>
             <Font size="26.0" />
          </font>
