--- a/src/main/resources/JavaFX/MyMix/FXML/W06_TimelineEvents.fxml
+++ b/src/main/resources/JavaFX/MyMix/FXML/W06_TimelineEvents.fxml
@@ -9,7 +9,7 @@
 
 <Pane fx:id="window06Pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFX.MyMix.Controllers.W06_Controller_TimelineEvents">
    <children>
-      <Label layoutX="500.0" layoutY="20.0" text="WINDOW_06">
+      <Label layoutX="500.0" layoutY="20.0" text="W06 Timeline Events">
          <font>
             <Font size="26.0" />
          </font>
