--- a/src/main/resources/JavaFX/Almas_progs/Paint/Paint.fxml
+++ b/src/main/resources/JavaFX/Almas_progs/Paint/Paint.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="JavaFX.Paint.PaintController"
+            fx:controller="JavaFX.Almas_progs.Paint.PaintController"
             prefHeight="600.0" prefWidth="600.0">
 
     <top>
